dev-env-local/test-webapp/ingress-webapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: webapp.localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webapp-jetty
              port:
                number: 8080
